# management-backup

./: .gitignore  README.md  hello.py  migrate_db.py  pyproject.toml  verify_feature.py
app/: database.py  main.py  models.py
app/routers/: backups.py  commands.py  credentials.py  devices.py  groups.py  logs.py  schedules.py
app/services/: backup_service.py  scheduler_service.py
app/static/: device_import_template.csv
app/templates/: backups.html  base.html  command_form.html  commands.html  credential_form.html  credentials.html  dashboard.html  device_form.html  devices.html  group_form.html  groups.html  log_view.html  logs.html  schedule_form.html  schedules.html
