[project]
name = "management-backup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "netmiko>=4.6.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "rich>=14.3.2",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
